# ComfyUI-SAM2-Realtime

./: pyproject.toml  requirements.txt  setup.py
sam2_realtime/: pyproject.toml
