[project]
name = "realtime_forktest_test"
description = "This extension provides object segmentation capabilities for ComfyUI workflows"
version = "0.0.2"
license = { file = "LICENSE" }
dependencies = [
    "torch>=2.3.1",
    "torchvision>=0.18.1",
    "pyyaml",
    "numpy>=1.24.4",
    "tqdm>=4.66.1",
    "hydra-core>=1.3.2",
    "iopath>=0.1.10",
    "pillow>=9.4.0",

]

[project.urls]
Repository = "https://github.com/eliteprox/ComfyUI-SAM2-Realtime"

[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "torch>=2.3.1",
    "pyyaml",
    "ninja",
    "cmake"
    ]
build-backend = "setuptools.build_meta"

[tool.comfy]
PublisherId = "eliteprox"
DisplayName = "realtime_forktest"
Icon = ""

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["sam2_realtime"]
include = ["*"]
exclude = ["examples*"]
namespaces = true

[tool.setuptools.package-data]
sam2_realtime = ["*.so", "*.pyd", "*.dll"]